css/post.css
body {
  font-family: "Lora", serif;
  color: #111111;
  background-color: #EEEEEE;
}

.container {
  max-width: 650px;
  margin-top: 70px;
  margin-bottom: 70px;
}

.post-title {
  color: #111111;
  font-family: "HK Nova", sans-serif;
}

.post-date {
  margin-bottom: 50px;
  color: #222222;
  font-family: "Inconsolata", monospace;
}

.post-content h1, .post-content h2, .post-content h3, .post-content h4, .post-content h5, .post-content h6 {
  margin-top: 50px;
  color: #111111;
  font-family: "HK Nova", sans-serif;
}

.post-content p, .post-content li, .post-content ol, .post-content ul {
  color: #111111;
  font-family: "Lora", serif;
  font-size: 20px;
}

.post-content a {
  color: #2590ff;
  text-decoration: none;
  border-bottom: 2px solid #2590ff;
  transition: color .2s ease, border .2s ease;
}

.post-content a:hover {
  color: #111111;
  border-bottom: 2px solid #111111;
}

.post-content img {
  width: 100%;
}

.post-content span.caption {
  display: block;
  margin-bottom: 10px;
  text-align: center;
  color: #333333;
  font-family: "Inconsolata", monospace;
  font-size: 15px;
}

.post-content code {
  color: #222222;
  font-family: "Inconsolata", monospace;
}

.post-content pre code {
  position: relative;
  background-color: #DDDDDD;
  border-color: #CCCCCC;
}

.post-content pre code::after {
  position: absolute;
  top: 5px;
  right: 10px;
  content: attr(lang);
  color: #CCCCCC;
  font-size: 15px;
}

/* Syntax Colors */

.string {
  color: #22c3a8;
}

.special {
  color: #a822c3;
}

.global {
  color: #d99426;
}

.method {
  color: #22a8c3;
}

.comment {
  color: #a6a6a6;
}

#back {
  position: absolute;
  top: 10px;
  left: 10px;
}

#back svg {
  height: 15px;
}

#back svg #back-arrow {
  transition: fill .2s ease;
}

#back:hover svg #back-arrow {
  fill: #2590ff;
}

@media screen and (max-width: 768px) {
  .container {
    margin-top: 50px;
  }
}

